# fiddle

./: CMakeLists.txt
cmake/: options.cmake
src/: CMakeLists.txt  fiddle.c  ftw.c  log.c  lua.c  stdio.c  unistd.c
src/bindings/: libc.c  log.c  posix.c
src/include/: fiddle.h
src/include/fiddle/: log.h  lua.h
